--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
     "cross-env": "^4.0.0",
-    "react-scripts": "0.9.5"
+    "html-webpack-plugin": "^4.0.4",
+    "react-scripts": "0.9.5",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "history": "^4.6.3",
@@ -23,7 +31,7 @@
     "superagent-promise": "^1.1.0"
   },
   "scripts": {
-    "start": "cross-env PORT=4100 react-scripts start",
+    "start": "webpack-dev-server -d --open --hot",
     "build": "react-scripts build",
     "test": "cross-env PORT=4100 react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
