--- a/package.json
+++ b/package.json
@@ -32,8 +32,6 @@
   },
   "scripts": {
     "start": "webpack-dev-server -d --open --hot",
-    "build": "react-scripts build",
-    "test": "cross-env PORT=4100 react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "build": "webpack -p"
   }
 }
