--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-redux-realworld-example-app",
+  "name": "caesars-myrewards-app",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
