--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prop-types": "^15.5.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-flight-datepicker": "^0.1.8",
     "react-redux": "^4.4.8",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
