--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.10",
     "@material-ui/lab": "^4.0.0-alpha.49",
+    "file-loader": "^6.0.0",
     "history": "^4.6.3",
     "marked": "^0.3.6",
     "moment": "^2.24.0",
@@ -39,9 +40,9 @@
     "superagent-promise": "^1.1.0"
   },
   "scripts": {
-    "start": "cross-env PORT=4100 react-scripts start",
-    "build": "react-scripts build",
-    "test": "cross-env PORT=4100 react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "webpack-dev-server -d --open --hot",
+    "test": "jest",
+    "build_dev": "webpack --mode development",
+    "build_prod": "webpack --mode production"
   }
 }
