--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+    "@babel/plugin-transform-spread": "^7.8.3",
     "@material-ui/core": "^4.9.12",
     "@material-ui/lab": "^4.0.0-alpha.51",
+    "core-js": "^3.6.5",
     "file-loader": "^6.0.0",
     "history": "^4.10.1",
     "marked": "^0.3.6",
