--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "history": "^4.10.1",
     "marked": "^0.3.6",
     "moment": "^2.24.0",
+    "moment-range": "^4.0.2",
     "node-sass": "^4.14.0",
     "prop-types": "^15.5.10",
     "react": "^16.13.1",
+    "react-daterange-picker": "^2.0.1",
     "react-dom": "^16.13.1",
     "react-google-flight-datepicker": "^0.1.8",
     "react-redux": "^4.4.8",
