--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "prop-types": "^15.5.10",
     "react": "^16.13.1",
     "react-daterange-picker": "^2.0.1",
+    "react-device-detect": "^1.12.1",
     "react-dom": "^16.13.1",
     "react-google-flight-datepicker": "^0.1.8",
+    "react-gtm-module": "^2.0.8",
     "react-redux": "^4.4.8",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
