--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-scripts": "0.9.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "webpack-pwa-manifest": "^4.2.0",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "dependencies": {
     "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
