--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cross-env": "^4.0.0",
     "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
+    "firebase": "^7.14.2",
     "html-webpack-plugin": "^4.2.1",
     "react-scripts": "0.9.5",
     "webpack": "^4.43.0",
