--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/plugin-transform-spread": "^7.8.3",
     "@material-ui/core": "^4.9.12",
     "@material-ui/lab": "^4.0.0-alpha.51",
+    "body-parser": "^1.19.0",
     "core-js": "^3.6.5",
     "file-loader": "^6.0.0",
     "history": "^4.10.1",
@@ -51,7 +52,9 @@
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "superagent": "^2.3.0",
-    "superagent-promise": "^1.1.0"
+    "superagent-promise": "^1.1.0",
+    "web-push": "^3.4.3",
+    "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
     "start": "webpack-dev-server -d --open --hot",
