--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-ga": "^2.7.0",
     "react-google-flight-datepicker": "^0.1.8",
     "react-gtm-module": "^2.0.8",
+    "react-hotjar": "^2.2.0",
     "react-redux": "^4.4.8",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
