--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-daterange-picker": "^2.0.1",
     "react-device-detect": "^1.12.1",
     "react-dom": "^16.13.1",
+    "react-fullstory": "^1.4.0",
     "react-ga": "^2.7.0",
     "react-google-flight-datepicker": "^0.1.8",
     "react-gtm-module": "^2.0.8",
