--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "cross-env": "^4.0.0",
     "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
-    "firebase": "^7.14.2",
     "html-webpack-plugin": "^4.2.1",
     "react-scripts": "0.9.5",
     "webpack": "^4.43.0",
@@ -24,26 +23,17 @@
   "dependencies": {
     "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
     "@babel/plugin-transform-spread": "^7.8.3",
-    "@material-ui/core": "^4.9.12",
-    "@material-ui/lab": "^4.0.0-alpha.51",
-    "body-parser": "^1.19.0",
     "core-js": "^3.6.5",
     "file-loader": "^6.0.0",
     "history": "^4.10.1",
-    "marked": "^0.3.6",
     "moment": "^2.24.0",
     "moment-range": "^4.0.2",
     "node-sass": "^4.14.0",
-    "prop-types": "^15.5.10",
     "react": "^16.13.1",
     "react-daterange-picker": "^2.0.1",
     "react-device-detect": "^1.12.1",
     "react-dom": "^16.13.1",
-    "react-fullstory": "^1.4.0",
-    "react-ga": "^2.7.0",
-    "react-google-flight-datepicker": "^0.1.8",
     "react-gtm-module": "^2.0.8",
-    "react-hotjar": "^2.2.0",
     "react-redux": "^4.4.8",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
@@ -56,8 +46,7 @@
     "style-loader": "^1.2.1",
     "superagent": "^2.3.0",
     "superagent-promise": "^1.1.0",
-    "web-push": "^3.4.3",
-    "webpack-node-externals": "^1.7.2"
+    "web-push": "^3.4.3"
   },
   "scripts": {
     "start": "webpack-dev-server -d --open --hot",
