--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.1",
-    "react-scripts": "0.9.5",
+    "react-scripts": "^3.4.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
+    "webpack-dev-server": "^3.11.0",
     "webpack-pwa-manifest": "^4.2.0",
     "workbox-webpack-plugin": "^4.3.1"
   },
@@ -28,7 +28,7 @@
     "history": "^4.10.1",
     "moment": "^2.24.0",
     "moment-range": "^4.0.2",
-    "node-sass": "^4.14.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-daterange-picker": "^2.0.1",
     "react-device-detect": "^1.12.1",
@@ -44,7 +44,7 @@
     "redux-logger": "^3.0.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
-    "superagent": "^2.3.0",
+    "superagent": "^5.2.2",
     "superagent-promise": "^1.1.0",
     "web-push": "^3.4.3"
   },
