--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
     "@babel/plugin-transform-spread": "^7.8.3",
+    "@material-ui/core": "^4.9.14",
     "core-js": "^3.6.5",
     "file-loader": "^6.0.0",
     "history": "^4.10.1",
