--- a/package.json
+++ b/package.json
@@ -1,58 +1,58 @@
 {
-    "name": "caesars-myrewards-app",
-    "version": "0.1.0",
-    "private": true,
-    "devDependencies": {
-        "@babel/core": "^7.9.6",
-        "@babel/preset-env": "^7.9.6",
-        "@babel/preset-react": "^7.9.4",
-        "@testing-library/jest-dom": "^5.7.0",
-        "@testing-library/react": "^10.0.4",
-        "babel-loader": "^8.1.0",
-        "cross-env": "^4.0.0",
-        "css-loader": "^3.5.3",
-        "file-loader": "^6.0.0",
-        "html-webpack-plugin": "^4.2.1",
-        "react-scripts": "^3.4.1",
-        "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.11.0",
-        "webpack-pwa-manifest": "^4.2.0",
-        "workbox-webpack-plugin": "^4.3.1"
-    },
-    "dependencies": {
-        "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
-        "@babel/plugin-transform-spread": "^7.8.3",
-        "@material-ui/core": "^4.9.14",
-        "core-js": "^3.6.5",
-        "file-loader": "^6.0.0",
-        "history": "^4.10.1",
-        "moment": "^2.24.0",
-        "moment-range": "^4.0.2",
-        "node-sass": "^4.14.1",
-        "react": "^16.13.1",
-        "react-daterange-picker": "^2.0.1",
-        "react-device-detect": "^1.12.1",
-        "react-dom": "^16.13.1",
-        "react-gtm-module": "^2.0.8",
-        "react-redux": "^4.4.8",
-        "react-router": "^4.1.2",
-        "react-router-dom": "^4.1.2",
-        "react-router-redux": "^5.0.0-alpha.6",
-        "react-scroll-up-button": "^1.6.4",
-        "redux": "^3.6.0",
-        "redux-devtools-extension": "^2.13.2",
-        "redux-logger": "^3.0.1",
-        "sass-loader": "^8.0.2",
-        "style-loader": "^1.2.1",
-        "superagent": "^5.2.2",
-        "superagent-promise": "^1.1.0",
-        "web-push": "^3.4.3"
-    },
-    "scripts": {
-        "start": "webpack-dev-server -d --open --hot",
-        "test": "react-scripts test --env=jsdom",
-        "build_dev": "webpack -p --mode=production",
-        "build_prod": "webpack --mode production"
-    }
+  "name": "caesars-myrewards-app",
+  "version": "0.1.0",
+  "private": true,
+  "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@testing-library/jest-dom": "^5.7.0",
+    "@testing-library/react": "^10.0.4",
+    "babel-loader": "^8.1.0",
+    "cross-env": "^4.0.0",
+    "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.2.1",
+    "react-scripts": "^3.4.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-pwa-manifest": "^4.2.0",
+    "workbox-webpack-plugin": "^4.3.1"
+  },
+  "dependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+    "@babel/plugin-transform-spread": "^7.8.3",
+    "@material-ui/core": "^4.9.14",
+    "core-js": "^3.6.5",
+    "file-loader": "^6.0.0",
+    "history": "^4.10.1",
+    "moment": "^2.24.0",
+    "moment-range": "^4.0.2",
+    "node-sass": "^4.14.1",
+    "react": "^16.13.1",
+    "react-daterange-picker": "^2.0.1",
+    "react-device-detect": "^1.12.1",
+    "react-dom": "^16.13.1",
+    "react-gtm-module": "^2.0.8",
+    "react-redux": "^4.4.8",
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
+    "react-router-redux": "^5.0.0-alpha.6",
+    "react-scroll-up-button": "^1.6.4",
+    "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
+    "superagent": "^5.2.2",
+    "superagent-promise": "^1.1.0",
+    "web-push": "^3.4.3"
+  },
+  "scripts": {
+    "start": "webpack-dev-server -d --open --hot",
+    "test": "react-scripts test --env=jsdom",
+    "build_dev": "webpack --mode development",
+    "build_prod": "webpack --mode production"
+  }
 }
